...
        case .newRomantic: String(localized: "New Romantic")
        }
    }

    var personagem: String {
        switch self {
        case .gotica: "Lucy"
        case .gyaru: "Sana"
        case .newRomantic: "Cindy"
        }
    }

    var chamada: String {
...
